Revert "fix scrollbar"
This reverts commit cbdf486b202ea26af0ddcc4be49409e244b4a584.

--- a/assets/stylus/countdown.styl
+++ b/assets/stylus/countdown.styl
@@ -1,7 +1,7 @@
 .container
 	width 90%
 	margin 0 auto
-	padding-top 2rem
+	margin-top 2rem
 	display relative
 
 .countdown
